done:Add Course

--- a/src/main/resources/templates/course/course.html
+++ b/src/main/resources/templates/course/course.html
@@ -41,14 +41,14 @@
                     {type:'numbers',fixed: 'left'},
                     {type:'checkbox'},
                     {field: 'id', title: 'Course ID', sort: true}
-                    ,{field: 'courseName', title: 'course name'}
+                    ,{field: 'name', title: 'course name'}
                     ,{field: 'professorName', title: 'professor'}
                     ,{field: 'session', title: 'session'}
                     ,{field: 'startTime', title: 'start time'}
                     ,{field: 'endTime', title: 'end time'}
                     ,{field: 'tuition', title:  'tuition ($)'}
                     ,{field: 'textbook', title: 'textbook'}
-                    ,{field: 'prerequisite', title: 'prerequisite'}
+                    ,{field: 'prerequisiteId', title: 'prerequisite'}
                     ,{fixed:'right',width:100, align:'center',toolbar:'#operation'}
 
                 ]
