--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -5,8 +5,7 @@
     <title>Title</title>
     <link rel="stylesheet" href="/layui/css/layui.css">
     <style type="text/css">
-        .login {
-            height: 190px;
+        .login{
             width: 340px;
             padding: 20px;
             background-color: rgba(0, 0, 0, 0.5);
@@ -17,9 +16,11 @@
             margin: -150px 0 0 -150px;
             z-index: 99;
         }
-        a{
-            width:300px;
+
+        a {
+            width: 300px;
         }
+
         .carousel {
             width: 100%;
             height: 100%;
@@ -29,21 +30,27 @@
             z-index: 90;
             background-color: rgba(0, 0, 0, 0.3);
         }
+
+        .show {
+            display: inline-block;
+        }
     </style>
 </head>
 <body>
-<div class="layui-carousel carousel"  lay-filter="carousel" id="carousel">
+<div class="layui-carousel carousel" lay-filter="carousel" id="carousel">
     <div carousel-item="">
         <div><img src="/images/background1.png"></div>
         <div><img src="/images/background2.png"></div>
     </div>
     <div class="layui-container login">
         <form id="loginForm" action="/user/login" class="layui-form" method="post" layui-form-pane>
-            <input type="text" name="username" lay-verify="required" placeholder="请输入账号" autocomplete="off"   class="layui-input">
+            <input type="text" name="username" lay-verify="required" placeholder="username" autocomplete="off"
+                   class="layui-input">
             <br>
-            <input type="password" name="password" lay-verify="required" placeholder="请输入密码" autocomplete="off" class="layui-input">
+            <input type="password" name="password" lay-verify="required" placeholder="password" autocomplete="off"
+                   class="layui-input">
             <br>
-            <a class="layui-btn  layui-btn-normal "  lay-filter="submit" lay-submit="" id="submit">登陆</a>
+            <a class="layui-btn  layui-btn-normal " lay-filter="submit" lay-submit="" id="submit">login</a>
         </form>
     </div>
 </div>
@@ -51,31 +58,31 @@
 <script src="/layui/layui.js"></script>
 <script src="/js/core.util.js"></script>
 <script>
-    layui.use(['form','jquery','carousel'],function () {
-        var layer=layui.layer;
-        var form=layui.form;
-        var $=layui.jquery;
-        var carousel=layui.carousel;
-        form.on('submit',function (data) {
-            CoreUtil.sendAjax("/api/user/login",JSON.stringify(data.field),function (res) {
+    layui.use(['form', 'jquery', 'carousel'], function () {
+        var layer = layui.layer;
+        var form = layui.form;
+        var $ = layui.jquery;
+        var carousel = layui.carousel;
+        form.on('submit', function (data) {
+            CoreUtil.sendAjax("/api/user/login", JSON.stringify(data.field), function (res) {
                 layer.msg(res.msg);
                 // 这里把userid放到session里面
                 CoreUtil.setData("userId", res.data.userId);
                 setTimeout(function () {
-                    window.location.href="/index/home";
-                },2000);
-            },"POST");
+                    window.location.href = "/index/home";
+                }, 2000);
+            }, "POST");
             // 阻止表单跳转
             return false;
         });
         //改变下时间间隔、动画类型、高度
         carousel.render({
             elem: '#carousel'
-            ,interval: 2000
-            ,anim: 'fade'
+            , interval: 2000
+            , anim: 'fade'
             , full: true        //全屏
-            ,width: '100%'
-            ,arrow: 'none'
+            , width: '100%'
+            , arrow: 'none'
         });
     })
 </script>
