--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -33,101 +33,56 @@
     </blockquote>
 
     <fieldset class="layui-elem-field layui-field-title" style="margin-top: 20px;">
-        <legend>Add Course</legend>
+        <legend>Become a member</legend>
     </fieldset>
 
     <form class="layui-form" action="">
         <div class="layui-form-item">
-            <label class="layui-form-label">Course name</label>
+            <label class="layui-form-label">username</label>
             <div class="layui-input-inline">
-                <input type="text" name="courseName" lay-verify="required" autocomplete="off"
-                       placeholder="pleases input course name" lay-reqtext="name can't be empty" class="layui-input">
+                <input type="text" id="username" name="username" lay-verify="required|username" lay-reqtext="username can't be empty" placeholder="pleases input" autocomplete="off" class="layui-input">
             </div>
+            <div class="layui-form-mid layui-word-aux" id="userInfo"></div>
         </div>
 
+        <div class="layui-form-item">
+            <label class="layui-form-label">password</label>
+            <div class="layui-input-inline">
+                <input type="password" name="password" id="password" lay-verify="pass|required" placeholder="password" autocomplete="off" class="layui-input">
+            </div>
+            <div class="layui-form-mid layui-word-aux" >Password should be from 6 to 12</div>
+        </div>
+
+        <div class="layui-form-item">
+            <label class="layui-form-label"></label>
+            <div class="layui-input-inline">
+                <input type="password" name="rpassword" id="rpassword"  autocomplete="off" class="layui-input">
+            </div>
+            <div class="layui-form-mid layui-word-aux" id="pwdInfo">Pleases confirm your password</div>
+        </div>
 
         <div class="layui-form-item">
             <div class="layui-inline">
-                <label class="layui-form-label">Start time</label>
+                <label class="layui-form-label">phone</label>
                 <div class="layui-input-inline">
-                    <input type="text" name="startTime" id="start" lay-verify="date" placeholder="yyyy-MM-dd" autocomplete="off"
-                           class="layui-input" >
+                    <input type="tel" name="phone" lay-verify="required|phone" autocomplete="off" class="layui-input">
                 </div>
             </div>
             <div class="layui-inline">
-                <label class="layui-form-label">End time</label>
+                <label class="layui-form-label">email</label>
                 <div class="layui-input-inline">
-                    <input type="text" name="endTime" id="end" lay-verify="date" placeholder="yyyy-MM-dd" autocomplete="off"
-                           class="layui-input" >
+                    <input type="text" name="email" lay-verify="email|required" autocomplete="off" class="layui-input">
                 </div>
             </div>
         </div>
 
-
         <div class="layui-form-item">
-            <label class="layui-form-label">Session</label>
-            <div class="layui-input-inline">
-                <select name="session">
-                    <option value="" selected="">options</option>
-                    <option value="1" >1</option>
-                    <option value="2">2</option>
-                    <option value="3">3</option>
-                </select>
-            </div>
-        </div>
-
-
-
-        <div class="layui-form-item">
-            <label class="layui-form-label">Professor</label>
-            <div class="layui-input-inline">
-                <select name="tId" id="professors">
-
-                </select>
-            </div>
-        </div>
-
-        <div class="layui-form-item">
-            <label class="layui-form-label">Tuition</label>
-            <div class="layui-input-inline">
-                <input type="number" name="tuition" lay-verify="number"  value="0" autocomplete="off"
-                       class="layui-input">
-            </div>
-            <div class="layui-form-mid layui-word-aux">$</div>
-        </div>
-
-        <div class="layui-form-item">
-            <label class="layui-form-label">Prerequisite</label>
-            <div class="layui-input-inline add">
-                <select name="prerequisiteId" class="prerequisite">
-                    <option value="null">no prerequisite</option>
-                </select>
-            </div>
-
-            <!--        <button type="button" class="layui-btn" id="addmore">-->
-            <!--            <i class="layui-icon">&#xe608;</i> add-->
-            <!--        </button>-->
-
-            <!--        <button type="button" class="layui-btn" id="deletePre">-->
-            <!--            <i class="layui-icon">&#xe640;</i> delete-->
-            <!--        </button>-->
-
-        </div>
-
-        <div class="layui-form-item">
-            <label class="layui-form-label">Textbook</label>
-            <div class="layui-input-inline">
-                <input type="text" name="textbook"  placeholder="请输入" autocomplete="off"
-                       class="layui-input">
-            </div>
-        </div>
-
-        <div class="layui-form-item layui-form-text">
-            <label class="layui-form-label">Course Description</label>
+            <label class="layui-form-label">address</label>
             <div class="layui-input-block">
-                <textarea placeholder="pleases input content" class="layui-textarea" name="des"></textarea>
+                <input type="text" name="address" lay-verify="required" autocomplete="off" placeholder="" class="layui-input">
             </div>
         </div>
+
 
         <div class="layui-form-item">
             <div class="layui-input-block">
@@ -170,83 +125,73 @@
         });
 
 
+        form.verify({
+            title: function(value){
+                if(value.length < 5){
+                    return '标题至少得5个字符啊';
+                }
+            }
+            ,pass: [
+                /^[\S]{6,12}$/
+                ,'The password must be 6-12 digits and no spaces'
+            ],
+            username: [
+                /(?!^[0-9]{6,12}$)(?!^[a-z]{6,12}$)(?!^[A-Z]{6,12}$)^[0-9A-Za-z]{6,12}$/
+                ,'Username must have at least 1 uppercase character, lowercase character and one number, and length between 6 - 12s'
+            ],
+            // myLength:function (value) {
+            //     if (value.length > 10 || value.length < 4){
+            //         return 'Username length must be between 4 and 10';
+            //     }
+            // }
+
+        });
+
         //监听提交
         form.on('submit(form1)', function (data) {
             var json = JSON.stringify(data.field);
 
-                CoreUtil.sendAjax('/api/course',json,function (res) {
+                CoreUtil.sendAjax('/api/user/add',json,function (res) {
 
                     top.layer.msg(res.msg,{icon: 16,time:2000,shade:0.8});
-                },'POST',false);
+
+                    setTimeout(function () {
+                        window.location.href = "/index/login";
+                    }, 2000);
+
+                },'PUT',false);
                 console.log(json);
 
 
             return false;
         });
 
-
-
-        // 选择 professor
-        CoreUtil.sendAjax('/api/professors/name',null,function (res) {
-            var dataList = res.data;
-
-            for (var i = 0; i < dataList.length; i++) {
-                //先创建好select里面的option元素
-                var option = document.createElement("option");
-                //转换DOM对象为JQ对象,好用JQ里面提供的方法 给option的value赋值
-                $(option).val(dataList[i].id);
-                //给option的text赋值,这就是你点开下拉框能够看到的东西
-                $(option).text(dataList[i].firstName + ' '+ dataList[i].lastName);
-                //获取select 下拉框对象,并将option添加进select
-                $('#professors').append(option);
-            }
-            form.render('select');
-        },'GET',false);
-
-
-        // 加载基本信息给prerequisite
-
-        function renderPrerequisite(dataList){
-            for (var i = 0; i < dataList.length; i++) {
-                //先创建好select里面的option元素
-                var option = document.createElement("option");
-                //转换DOM对象为JQ对象,好用JQ里面提供的方法 给option的value赋值
-                $(option).val(dataList[i].name);
-                //给option的text赋值,这就是你点开下拉框能够看到的东西
-                $(option).text(dataList[i].name + ' ' + dataList[i].session);
-                //获取select 下拉框对象,并将option添加进select
-                $('.prerequisite').append(option);
-            }
-            form.render('select');
-        }
-
-        //设置 prerequisite 删除按钮
-        $('#deletePre').on('click', function(){
-            var selection = $('.add');
-            if (selection.length === 1){
-                layer.msg('This is the last one!',{icon: 5});
-            }else {
-                $('.add:last').remove();
-            }
+        //username失焦检测是否存在
+        $("#username").blur(function () {
+            //1失去焦点，获得表单输入数据
+            //var usernameInput = $(username).val();
+            var usernameInput = $(this).val();
+            CoreUtil.sendAjax('/api/user/signup/username/' + usernameInput,null,function (res) {
+               if (res.data){
+                   $('#userInfo').html('<i class="layui-icon" style="color: red;">&#x1006;</i>    username already exists')
+               } else{
+                   $('#userInfo').html('<i class="layui-icon" style="color: green;">&#xe605;</i> ')
+               }
+            },'GET',false);
 
         });
 
-        CoreUtil.sendAjax('/api/courses/baseInfo',null,function (res) {
-            var dataList = res.data;
-            CoreUtil.setData('courseBaseInfo', dataList);
-            renderPrerequisite(dataList);
-        },'GET',false);
+        // 确认密码
+        $('#rpassword').blur(function () {
 
-        $('#addmore').on('click', function () {
-            var html = '<div class="layui-input-inline add">' +
-                '<select name="prerequisite" class="prerequisite">' +
-                    '</select>' +
-                    '</div>';
-            $('.add:last').append(html);
-            var dataList = CoreUtil.getData('courseBaseInfo');
-            renderPrerequisite(dataList);
+            var pwd = $('#password').val();
+            if (pwd !== $(this).val()){
+                $('#pwdInfo').html('<i class="layui-icon" style="color: red;">&#x1006;</i> Two passwords are different');
+                $(this).val("");
+            }else {
+                $('#pwdInfo').html('<i class="layui-icon" style="color: green;">&#xe605;</i> ');
+            }
         })
-
 
     });
 </script>
