--- a/src/main/resources/templates/student/student.html
+++ b/src/main/resources/templates/student/student.html
@@ -15,6 +15,13 @@
     <a class="layui-btn layui-btn-xs layui-btn-normal" lay-event="detail">edit</a>
     <a class="layui-btn layui-btn-xs layui-btn-danger" lay-event="detail">delete</a>
 </script>
+<script type="text/html" id="toolbar">
+    <div class="layui-btn-group">
+        <button  type="button" class="layui-btn" lay-event="addDept">
+            <i class="layui-icon">&#xe608;</i> add kids
+        </button>
+    </div>
+</script>
 <script src="/layui/layui.js"></script>
 <script src="/js/core.util.js"></script>
 <script>
@@ -50,7 +57,8 @@
                     ,{fixed: 'right',width:200, align:'center',toolbar:'#operation'}
                 ]
             ],
-            cellMinWidth: 100
+            cellMinWidth: 100,
+            toolbar: '#toolbar'
         });
 
     });
