--- a/src/main/resources/templates/user/user.html
+++ b/src/main/resources/templates/user/user.html
@@ -6,7 +6,13 @@
     <link rel="stylesheet" href="/layui/css/layui.css" media="all">
 </head>
 <body>
+<blockquote class="layui-elem-quote layui-text">
+    Some information
+</blockquote>
 
+<fieldset class="layui-elem-field layui-field-title" style="margin-top: 20px;">
+    <legend>All Users</legend>
+</fieldset>
 <table id="demo" lay-filter="test"></table>
 
 <script src="/layui/layui.js"></script>
