--- a/src/main/resources/templates/student/add_student.html
+++ b/src/main/resources/templates/student/add_student.html
@@ -16,7 +16,7 @@
 </blockquote>
 
 <fieldset class="layui-elem-field layui-field-title" style="margin-top: 20px;">
-    <legend>Add Course</legend>
+    <legend>Add Kids</legend>
 </fieldset>
 
 <form class="layui-form" action="">
@@ -41,7 +41,7 @@
         <div class="layui-inline">
             <label class="layui-form-label">Date of birth</label>
             <div class="layui-input-inline">
-                <input type="text" name="birth" id="start" lay-verify="date" placeholder="yyyy-MM-dd" autocomplete="off"
+                <input type="text" name="birth" id="date" lay-verify="date" placeholder="yyyy-MM-dd" autocomplete="off"
                        class="layui-input" >
             </div>
         </div>
@@ -90,7 +90,7 @@
         var form = layui.form
             , layer = layui.layer
             , layedit = layui.layedit
-            , laydate = layui.laydate
+
             , $ = layui.jquery;
 
         //日期
@@ -128,9 +128,9 @@
                 },'POST',false);
 
 
-                // setTimeout(function () {
-                //     window.location.href = "/index/student";
-                // }, 2000);
+                setTimeout(function () {
+                    window.location.href = "/index/student";
+                }, 2000);
 
             return false;
         });
